WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213942
[WPE] Fix build with clang after
r263898
https://bugs.webkit.org/show_bug.cgi?id=213942
Summary
[WPE] Fix build with clang after r263898
Lauro Moura
Reported
2020-07-03 13:50:57 PDT
The WPE Release Bot is now using clang and caught[1] the following error: " DerivedSources/ForwardingHeaders/wtf/HashTable.h:956:17: error: incomplete type 'WTF::StringHash' named in nested name specifier if (HashFunctions::safeToCompareToEmptyOrDeleted) { ^~~~~~~~~~~~~~~ DerivedSources/ForwardingHeaders/wtf/HashTable.h:466:56: note: in instantiation of function template specialization 'WTF::HashTable<WTF::String, WTF::String, WTF::IdentityExtractor, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::String> >::add<WTF::IdentityHashTranslator<WTF::HashTraits<WTF::String>, WTF::StringHash>, const WTF::String &, const WTF::String &>' requested here AddResult add(const ValueType& value) { return add<IdentityTranslatorType>(Extractor::extract(value), value); } ^ DerivedSources/ForwardingHeaders/wtf/HashSet.h:239:19: note: in instantiation of member function 'WTF::HashTable<WTF::String, WTF::String, WTF::IdentityExtractor, WTF::StringHash, WTF::HashTraits<WTF::String>, WTF::HashTraits<WTF::String> >::add' requested here return m_impl.add(value); ^ ../../Source/WebCore/loader/appcache/ApplicationCacheManifestParser.cpp:161:39: note: in instantiation of member function 'WTF::HashSet<WTF::String, WTF::StringHash, WTF::HashTraits<WTF::String> >::add' requested here manifest.explicitURLs.add(url.string()); ^ DerivedSources/ForwardingHeaders/wtf/text/StringParsingBuffer.h:119:16: note: in instantiation of function template specialization 'WebCore::parseApplicationCacheManifest(const WTF::URL &, const WTF::String &, const char *, int)::(anonymous class)::operator()<WTF::StringParsingBuffer<unsigned char> >' requested here return functor(StringParsingBuffer { string.characters8(), string.length() }); ^ ../../Source/WebCore/loader/appcache/ApplicationCacheManifestParser.cpp:82:12: note: in instantiation of function template specialization 'WTF::readCharactersForParsing<WTF::String &, (lambda at ../../Source/WebCore/loader/appcache/ApplicationCacheManifestParser.cpp:82:53)>' requested here return readCharactersForParsing(manifestString, [&](auto buffer) -> Optional<ApplicationCacheManifest> {" [1]
https://build.webkit.org/builders/WPE%20Linux%2064-bit%20Release%20%28Build%29/builds/34853
Attachments
Patch
(1.23 KB, patch)
2020-07-03 13:54 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
Patch
(1.22 KB, patch)
2020-07-03 14:01 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
Patch
(1.22 KB, patch)
2020-07-03 14:02 PDT
,
Lauro Moura
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Lauro Moura
Comment 1
2020-07-03 13:54:39 PDT
Created
attachment 403484
[details]
Patch
Lauro Moura
Comment 2
2020-07-03 14:01:10 PDT
Created
attachment 403487
[details]
Patch
Lauro Moura
Comment 3
2020-07-03 14:02:04 PDT
Created
attachment 403488
[details]
Patch
EWS
Comment 4
2020-07-03 14:27:30 PDT
Committed
r263908
: <
https://trac.webkit.org/changeset/263908
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403488
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug