[WPE] Fix build with clang after r263898 https://bugs.webkit.org/show_bug.cgi?id=213942

Unreviewed build fix.


* loader/appcache/ApplicationCacheManifestParser.cpp:


Canonical link: https://commits.webkit.org/226736@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263908 268f45cc-cd09-0410-ab3c-d52691b4dbfc