Source/WebCore/loader/appcache/ApplicationCacheManifestParser.cpp
@@ -28,6 +28,7 @@
 
 #include "ParsingUtilities.h"
 #include "TextResourceDecoder.h"
+#include <wtf/text/StringHash.h>
 #include <wtf/text/StringParsingBuffer.h>
 #include <wtf/text/StringView.h>
 
